--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "4.8.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/browser": "4.1.1",
-    "@capacitor/core": "4.8.0",
-    "@capacitor/ios": "4.8.0",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/app": "^8.0.1",
+    "@capacitor/browser": "^8.0.1",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/ios": "^8.1.0",
+    "@capacitor/status-bar": "^8.0.1",
     "@headlessui/react": "^2.2.9",
     "axios": "^1.13.1",
     "cookies-next": "^6.1.1",
@@ -28,7 +28,7 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "4.8.0",
+    "@capacitor/cli": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
