Add Codemagic iOS workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,6 @@ workflows:
         distribution_type: app_store
         bundle_identifier: com.datajury.app
       vars:
-        BUNDLE_ID: "com.datajury.app"
         TEAM_ID: "R8W6XUCMDD"
 
     integrations:
@@ -20,13 +19,6 @@ workflows:
         script: |
           set -euo pipefail
           npm ci
-
-      - name: "Debug Capacitor versions"
-        script: |
-          set -euo pipefail
-          node -v
-          npm -v
-          npm ls @capacitor/core @capacitor/ios @capacitor/cli || true
 
       - name: "Build Next.js (optional)"
         script: |
@@ -56,12 +48,8 @@ workflows:
         script: |
           set -euo pipefail
           export PATH="$HOME/Library/Python/3.12/bin:$HOME/Library/Python/3.11/bin:$HOME/Library/Python/3.10/bin:$PATH"
-
           keychain initialize
           xcode-project use-profiles --project ios/App/App.xcodeproj
-
-          echo "Available signing identities:"
-          security find-identity -v -p codesigning || true
 
       - name: "Force numeric CFBundleVersion (all Info.plist)"
         script: |
@@ -73,7 +61,7 @@ workflows:
               || /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string $BUILD_NUM" "$PLIST"
           done < <(find ios -name "Info.plist")
 
-      - name: "Archive (SPM: project) signed"
+      - name: "Archive (SPM: project)"
         script: |
           set -euo pipefail
           : "${BUILD_NUM:?BUILD_NUM not set}"
@@ -115,9 +103,7 @@ workflows:
           </plist>
           EOF
 
-          ls -la build/privacy/PrivacyInfo.xcprivacy
-
-      - name: "Inject PrivacyInfo.xcprivacy into frameworks + re-sign (auto identity)"
+      - name: "Inject PrivacyInfo.xcprivacy into frameworks (NO re-sign)"
         script: |
           set -euo pipefail
           set -x
@@ -128,7 +114,7 @@ workflows:
           APP_DIR="build/App.xcarchive/Products/Applications/App.app"
           test -d "$APP_DIR"
 
-          echo "=== Embedded frameworks found in App.app ==="
+          echo "=== Embedded frameworks found ==="
           find "$APP_DIR" -maxdepth 4 -type d -name '*.framework' -print || true
 
           CAP_FW="$(find "$APP_DIR" -maxdepth 5 -type d -name "Capacitor.framework" | head -n 1 || true)"
@@ -147,34 +133,7 @@ workflows:
             ls -la "$COR_FW/PrivacyInfo.xcprivacy"
           fi
 
-          # ✅ Auto-detect a valid codesign identity present in the current keychain
-          echo "Available signing identities:"
-          security find-identity -v -p codesigning || true
-
-          SIGN_HASH="$(security find-identity -v -p codesigning \
-            | grep -i "Apple Distribution" \
-            | head -n 1 \
-            | awk '{print $2}')"
-
-          if [ -z "${SIGN_HASH:-}" ]; then
-            # fallback: any identity
-            SIGN_HASH="$(security find-identity -v -p codesigning | head -n 1 | awk '{print $2}')"
-          fi
-
-          if [ -z "${SIGN_HASH:-}" ]; then
-            echo "❌ No codesigning identity found in keychain"
-            exit 1
-          fi
-
-          echo "Using codesign identity hash: $SIGN_HASH"
-
-          /usr/bin/codesign --force --sign "$SIGN_HASH" --timestamp=none "$CAP_FW"
-          /usr/bin/codesign -vv "$CAP_FW"
-
-          if [ -n "$COR_FW" ]; then
-            /usr/bin/codesign --force --sign "$SIGN_HASH" --timestamp=none "$COR_FW"
-            /usr/bin/codesign -vv "$COR_FW"
-          fi
+          echo "✅ Injected manifests. Export step will re-sign IPA."
 
       - name: "Export IPA"
         script: |
@@ -184,12 +143,8 @@ workflows:
           cat > build/export_options.json <<'EOF'
           {
             "method": "app-store-connect",
-            "signingStyle": "manual",
             "teamID": "R8W6XUCMDD",
-            "signingCertificate": "Apple Distribution",
-            "provisioningProfiles": {
-              "com.datajury.app": "com.datajury.app"
-            },
+            "signingStyle": "automatic",
             "stripSwiftSymbols": true,
             "compileBitcode": false
           }
@@ -212,7 +167,6 @@ workflows:
           IPA_PATH="$(ls -1 build/ipa/*.ipa | head -n 1)"
           TMPDIR="$(mktemp -d)"
           unzip -q "$IPA_PATH" -d "$TMPDIR"
-          echo "Privacy manifests found:"
           find "$TMPDIR/Payload/App.app" -maxdepth 6 -name "PrivacyInfo.xcprivacy" -print || true
 
     artifacts:
